force-app/main/default/objects/QuoteLineItem/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start_Date</label>
    <type>Date</type>
</CustomField>