force-app/main/default/objects/QuoteLineItem/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <type>TextArea</type>
</CustomField>